--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,5 @@ jobs:
       - image: circleci/python:3.6
     steps:
       - checkout
+      - run: pip install -r requirements.txt
       - run: python manage.py test
