fix running tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,6 @@ jobs:
             - ".venv"
             - "/usr/local/bin"
             - "/usr/local/lib/python3.6/site-packages"
-      - pipenv run "python manage.py test"
+      - run:
+        command: |
+          pipenv run "python manage.py test"
