--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh start.sh
     volumes:
       - .:/code
     ports:
-      - "6999:6999"
+      - "7111:8000"
