npm run dev without optimizing

--- a/js/package.json
+++ b/js/package.json
@@ -5,7 +5,7 @@
   "author": "Максим Барабанов <maxim.barabanov@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node_modules/.bin/webpack --config build/webpack.dev.conf.js --watch",
+    "dev": "node_modules/.bin/webpack --config build/webpack.debug.conf.js --watch",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
