--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,8 @@ urllib3 = "==1.24.1"
 django-filter = "*"
 Django = "==2.1.5"
 PyJWT = "==1.7.1"
+faker = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.6"
